# file_io

./: .gitignore  CMakeLists.txt  how_to.txt  text_file1.txt
include/: file_io.hpp  file_reader.hpp  file_writer.hpp  filesystem_utils.hpp  time_utils.hpp
src/: file_io.cpp  file_reader.cpp  file_writer.cpp  filesystem_utils.cpp  main.cpp
temp/: file_io.hpp  main.cpp
